--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My blog</title>
 </head>
-<body>
-    
+<body class="body">
+    <style>
+        .body{
+            background-color: blue;
+        }
+    </style>
 </body>
 </html>
