--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
             background-color: blue;
         }
     </style>
+    <h1>This is my blog</h1>
+
     <p>hello!</p>
+
 </body>
 </html>
