--- a/Files/index.html
+++ b/Files/index.html
@@ -3,16 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>My blog</title>
 </head>
-<body class="body">
-    <style>
-        .body{
-            background-color: blue;
-        }
-    </style>
+<body>
     <h1>This is my blog</h1>
-
     <p>hello!</p>
 
 </body>
