--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>My blog</title>
 </head>
 <body>
-    <h1>This is my blog</h1>
-    <p>hello!</p>
+    <h1>Hello!</h1>
+    <p>This is a personal blog were I want to post about projects I create (or contribute to), progress I make in studying cyber security and anything else I do in the field.</p>
+    <p>Additionally, I am going to work on the site itself - imporving UI, adding extra functionality, etc - and post all the updates here.</p>
     <hr>
-
 </body>
 </html>
