--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Hello!</h1>
-    <p>This is a personal blog were I want to post about projects I create (or contribute to), progress I make in studying cyber security and anything else I do in the field.</p>
-    <p>Additionally, I am going to work on the site itself - imporving UI, adding extra functionality, etc - and post all the updates here.</p>
+    <p>This is a personal blog were I want to post about projects I create (or contribute to), progress I make in studying cyber security and anything else I do in the field. Also, I am going to work on the site itself and post any the updates here.</p>
+    <p>Additionally, I will keep the design of the site simple because I'm here to write and I'm not the greastest coder.</p>
     <hr>
 </body>
 </html>
