--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <p>Additionally, I will keep the design of the site simple because I'm here to write and I'm not the greastest coder.</p>
     <hr>
 
-    <h2>Latest posts</h2>
+    <h1>Latest posts</h1>
+    <hr>
+    <div class="posts">
+        <h2 class="posts" id="postOne"></h2>
+        <p></p>
+    </div>
 </body>
 </html>
