--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Hello!</h1>
     <p>This is a personal blog were I want to post about projects I create (or contribute to), progress I make in studying cyber security and anything else I do in the field. Also, I am going to work on the site itself and post any the updates here.</p>
-    <p>Additionally, I will keep the design of the site simple because I'm here to write and I'm not the greastest coder.</p>
+    <p>Additionally, I will keep the design of the site simple (for the time) because I'm here to write and I'm not the greastest coder.</p>
     <hr>
 
     <h1>Latest posts</h1>
