--- a/MyBlog/index.html
+++ b/MyBlog/index.html
@@ -15,6 +15,9 @@
 
     <h1>Latest posts</h1>
     <hr>
+    <nav>
+        <a href="?post=posts/post1.md">Post 1</a>
+    </nav>
 
     <script>
         const params = new URLSearchParams(window.location.search);
