--- a/MyBlog/index.html
+++ b/MyBlog/index.html
@@ -16,7 +16,7 @@
     <h1>Latest posts</h1>
     <hr>
     <nav>
-        <a href="?post=posts/post1.md">Post 1</a>
+        <a href="?post=posts/testpost.md">Post 1</a>
     </nav>
 
     <script>
