--- a/MyBlog/index.html
+++ b/MyBlog/index.html
@@ -19,6 +19,9 @@
         <a href="posts/testpost.md">Post 1</a>
     </nav>
 
+    <div class="content"></div>
+
+
     <script>
         const params = new URLSearchParams(window.location.search);
         const post = params.get("post") || "posts/testpost.md";
