--- a/MyBlog/index.html
+++ b/MyBlog/index.html
@@ -19,7 +19,7 @@
         <a href="posts/testpost.md">Post 1</a>
     </nav>
 
-    <div class="content"></div>
+    <div id="content"></div>
 
 
     <script>
