--- a/MyBlog/index.html
+++ b/MyBlog/index.html
@@ -7,17 +7,17 @@
     <script src="assets/marked.min.js"></script>
     <title>My blog</title>
 </head>
-<body>
+<header class="Header">
     <h1>Hello!</h1>
+</header>
+<body>
     <p>This is a personal blog were I want to post about projects I create (or contribute to), progress I make in studying cyber security and anything else I do in the field. Also, I am going to work on the site itself and post any the updates here.</p>
     <p>Additionally, I will keep the design of the site simple (for the time) because I'm here to write and I'm not the greastest coder.</p>
     <hr>
 
+    <div class="LPTitle">
     <h1>Latest posts</h1>
-    <hr>
-    <nav>
-        <a href="posts/testpost.md">Post 1</a>
-    </nav>
+    </div>
 
     <div id="content"></div>
 
