--- a/MyBlog/index.html
+++ b/MyBlog/index.html
@@ -13,7 +13,7 @@
 </header>
 
 <body>
-    <p>This is a personal blog were I want to post about projects I create (or contribute to), progress I make in studying cyber security and anything else I do in the field. Also, I am going to work on the site itself and post any the updates here.</p>
+    <p>This is a personal blog were I want to post about projects I create (or contribute to), progress I make in studying cyber security and anything else I do in the field. Also, I am going to work on the site itself and post any of the updates here.</p>
     <p>Additionally, I will keep the design of the site simple (for the time) because I'm here to write and I'm not the greastest coder.</p>
     <hr>
 
