--- a/BredBlog/index.html
+++ b/BredBlog/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="assets/marked.min.js"></script>
-    <title>My blog</title>
+    <title>BredBlog</title>
 </head>
 
 <header class="Header">
