--- a/BredBlog/index.html
+++ b/BredBlog/index.html
@@ -25,8 +25,7 @@
 
     <script>
     const posts = [
-        "posts/testpost.md",
-        //"posts/27082025.md"
+        "posts/27082025.md"
     ];
 
     const contentDiv = document.getElementById("content");
