--- a/BredBlog/index.html
+++ b/BredBlog/index.html
@@ -25,7 +25,7 @@
 
     <script>
     const posts = [
-        //"posts/28082025.md",
+        "posts/28082025.md",
         "posts/27082025.md"
     ];
 
