--- a/BredBlog/index.html
+++ b/BredBlog/index.html
@@ -21,7 +21,7 @@
     <h1>Latest posts</h1>
     </div>
 
-    <div id="content"></div>
+    <div id="content">
 
     <script>
     const posts = [
@@ -57,7 +57,7 @@
 
 loadPosts();
     </script>
-
+    </div>
 <hr style="border: 3px solid black;">
 
 </body>
